# cryptoSphere

./: CMakeLists.txt  README.md  constants.h  encryption.h  main.c
caesar/: caesar.h  caesar_cipher.c  caesar_decipher.c
functions/: functions.c  functions.h
rail_fence/: rail_fence.h  rail_fence_cipher.c  rail_fence_decipher.c
substitution/: substitution.h  substitution_cipher.c  substitution_decipher.c
vigenere/: vigenere.h  vigenere_cipher.c  vigenere_decipher.c
xor/: xor.h  xor_cipher.c
